syntax = "proto3";

option go_package = "github.com/cntechpower/anywhere/agent_pb";

package anywhereAgentRpc;

service AnywhereAgent {
    rpc ListConnections(Empty)returns(Conns){}
    rpc KillConnById(KillConnByIdInput)returns(Empty){}
    rpc KillAllConnections(Empty)returns(Empty){}
    rpc ShowStatus(Empty)returns(ShowStatusOutput) {}
}

message Empty{}

message Conn {
    int64 connId = 1;
    string srcRemoteAddr = 2;
    string srcLocalAddr = 3;
    string dstRemoteAddr = 4;
    string dstLocalAddr = 5;

}

message Conns{
    repeated Conn conn = 1;
}

message KillConnByIdInput {
    int64 connId = 1;
}

message ShowStatusOutput {
    string agentId = 1;
    string localAddr = 2;
    string serverAddr = 3;
    string lastAckSendTime = 4;
    string lastAckRcvTime = 5;
}
